--- a/LayoutTests/fast/images/hdr-background-image-expected.html
+++ b/LayoutTests/fast/images/hdr-background-image-expected.html
@@ -13,16 +13,14 @@
 </style>
 <body>
     <div style="position: fixed; top: 10px; left: 10px;">
-        <div class="container" style="background-color: rgb(255 215 0);">
+        <div class="container" style="background-color: green;"></div>
     </div>
     <div style="position: fixed; top: 10px; left: 220px;">
-        <div class="container" style="background-color: green;">
-            <div class="box" style="background-color: rgb(255 215 0);">
-        </div>
+        <div class="container" style="background-color: rgb(255 215 0);"></div>
     </div>
-    <div style="position: fixed; top: 10px; left: 440px;">
+    <div style="position: fixed; top: 10px; left: 430px;">
         <div class="container" style="background-color: green;">
-            <div class="box" style="background-color: rgb(255 215 0);">
+            <div class="box" style="background-color: rgb(255 215 0);"></div>
         </div>
     </div>
 </body>
