--- a/LayoutTests/fast/images/hdr-border-image-expected.html
+++ b/LayoutTests/fast/images/hdr-border-image-expected.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <style>
-    .image-box {
+    .container {
         width: 200px;
         height: 200px;
     }
 </style>
 <body>
     <div style="position: fixed; top: 10px; left: 10px;">
-        <div class="image-box" style="background-color: rgb(255 215 0);"></div>
+        <div class="container" style="background-color: green;"></div>
     </div>
     <div style="position: fixed; top: 10px; left: 220px;">
-        <div class="image-box" style="background-color: rgb(255 215 0);"></div>
+        <div class="container" style="background-color: rgb(255 215 0);"></div>
     </div>
 </body>
 </html>
