--- a/LayoutTests/fast/events/constructors/progress-event-constructor.html
+++ b/LayoutTests/fast/events/constructors/progress-event-constructor.html
@@ -37,30 +37,30 @@ shouldBe("new ProgressEvent('eventType', { lengthComputable: true }).lengthCompu
 
     // [2^53, 2^64 - 1]. A value that is in the unsigned long long range but cannot be represented as a double.
     // Spec: http://www.w3.org/TR/WebIDL/#es-unsigned-long-long
-    shouldBe("new ProgressEvent('eventType', { " + attr + ": 18446744073709551615 })." + attr, "0");
+    shouldBe("new ProgressEvent('eventType', { " + attr + ": 18446744073709551615 })." + attr, "18446744073709552000");
     shouldBe("new ProgressEvent('eventType', { " + attr + ": 12345678901234567890 })." + attr, "12345678901234567890");
 
     // A negative number.
-    shouldBe("new ProgressEvent('eventType', { " + attr + ": -1 })." + attr, "18446744073709551615");
+    shouldBe("new ProgressEvent('eventType', { " + attr + ": -1 })." + attr, "-1");
 
     // NaN.
-    shouldBe("new ProgressEvent('eventType', { " + attr + ": NaN })." + attr, "0");
+    shouldThrowErrorName("new ProgressEvent('eventType', { " + attr + ": NaN })." + attr, "TypeError");
 
     // A double.
-    shouldBe("new ProgressEvent('eventType', { " + attr + ": 123.45 })." + attr, "123");
+    shouldBe("new ProgressEvent('eventType', { " + attr + ": 123.45 })." + attr, "123.45");
 
     // Non-numeric values.
     shouldBe("new ProgressEvent('eventType', { " + attr + ": undefined })." + attr, "0");
     shouldBe("new ProgressEvent('eventType', { " + attr + ": null })." + attr, "0");
     shouldBe("new ProgressEvent('eventType', { " + attr + ": '' })." + attr, "0");
     shouldBe("new ProgressEvent('eventType', { " + attr + ": '12345' })." + attr, "12345");
-    shouldBe("new ProgressEvent('eventType', { " + attr + ": '12345a' })." + attr, "0");
-    shouldBe("new ProgressEvent('eventType', { " + attr + ": 'abc' })." + attr, "0");
+    shouldThrowErrorName("new ProgressEvent('eventType', { " + attr + ": '12345a' })." + attr, "TypeError");
+    shouldThrowErrorName("new ProgressEvent('eventType', { " + attr + ": 'abc' })." + attr, "TypeError");
     shouldBe("new ProgressEvent('eventType', { " + attr + ": [] })." + attr, "0");
     shouldBe("new ProgressEvent('eventType', { " + attr + ": [12345] })." + attr, "12345");
-    shouldBe("new ProgressEvent('eventType', { " + attr + ": [12345, 67890] })." + attr, "0");
-    shouldBe("new ProgressEvent('eventType', { " + attr + ": {} })." + attr, "0");
-    shouldBe("new ProgressEvent('eventType', { " + attr + ": {moe: 12345} })." + attr, "0");
+    shouldThrowErrorName("new ProgressEvent('eventType', { " + attr + ": [12345, 67890] })." + attr, "TypeError");
+    shouldThrowErrorName("new ProgressEvent('eventType', { " + attr + ": {} })." + attr, "TypeError");
+    shouldThrowErrorName("new ProgressEvent('eventType', { " + attr + ": {moe: 12345} })." + attr, "TypeError");
     shouldBe("new ProgressEvent('eventType', { " + attr + ": {valueOf: function () { return 12345; }} })." + attr, "12345");
 });
 
