[GTK][WPE] Wrong vector index calculated in Damage::unite() https://bugs.webkit.org/show_bug.cgi?id=289955
Reviewed by Alejandro G. Castro.

The problem is that we are using ceiledIntPoint() resulting in cell
indices starting at 1, we should use flooredIntPoint instead to get the
right cell indices starting at 0.
This patch also includes other improvements and cleanups to Damage and a
small change in behavior, now we start doing the unite when adding a new
rectangle that would increase the vector size over the maximum instead
of when the maximum is reached.
The patch also includes a new unit test.

* LayoutTests/platform/glib/damage/storage-and-simplification-algorithm.html:
* Source/WebCore/platform/graphics/Damage.h:
(WebCore::Damage::Damage):
(WebCore::Damage::bounds const):
(WebCore::Damage::resize):
(WebCore::Damage::add):
(WebCore::Damage::uniteExistingRects):
(WebCore::Damage::tileIndexForRect const):
(WebCore::Damage::unite):
(WebCore::Damage::invalidate): Deleted.
(WebCore::Damage::shouldUnite const): Deleted.
* Tools/TestWebKitAPI/PlatformGTK.cmake:
* Tools/TestWebKitAPI/PlatformWPE.cmake:
* Tools/TestWebKitAPI/Tests/WebCore/glib/Damage.cpp: Added.
(TestWebKitAPI::TEST(Damage, Basics)):
(TestWebKitAPI::TEST(Damage, AddRect)):
(TestWebKitAPI::TEST(Damage, AddDamage)):
(TestWebKitAPI::TEST(Damage, Unite)):

Canonical link: https://commits.webkit.org/292360@main

--- a/LayoutTests/platform/glib/damage/storage-and-simplification-algorithm.html
+++ b/LayoutTests/platform/glib/damage/storage-and-simplification-algorithm.html
@@ -18,7 +18,7 @@
       processAnimationFrameSequence({skipFirstFrameToEnsureInitialPaintingDone: true}, [
           () => {
               // Draw few enough rects to avoid merging.
-              for (let i = 0; i < mergingThreshold - 1; i++) {
+              for (let i = 0; i < mergingThreshold; i++) {
                   ctx.fillRect(1 + (i % 25) * 4, 1 + Math.floor(i / 25) * 4, 1, 1);
               }
           },
@@ -27,14 +27,14 @@
               var damage = latestFrameDamage();
               assertValid(damage);
               var expectedRects = [];
-              for (let i = 0; i < mergingThreshold - 1; i++) {
+              for (let i = 0; i < mergingThreshold; i++) {
                   expectedRects.push([(i % 25) * 4, Math.floor(i / 25) * 4, 3, 3]);
               }
               assertRectsEq(damage.rects, expectedRects);
           },
           () => {
               // Draw enough rects to trigger merging.
-              for (let i = 0; i < mergingThreshold; i++) {
+              for (let i = 0; i <= mergingThreshold; i++) {
                   ctx.fillRect(1 + (i % 25) * 4, 1 + Math.floor(i / 25) * 4, 1, 1);
               }
           },
