--- a/LayoutTests/fast/css/create-columns-onload-crash.html
+++ b/LayoutTests/fast/css/create-columns-onload-crash.html
@@ -1,9 +1,19 @@
 <script>
-    if (window.testRunner)
+    if (window.testRunner) {
         testRunner.dumpAsText();
+        testRunner.waitUntilDone();
+  }
   onload = () => {
-    let cssStyleValue = CSSMathValue.parseAll('columns', 'auto')[0];
-    document.body.attributeStyleMap.append('grid-auto-columns', cssStyleValue);
+    function run() {
+      try {
+        let cssStyleValue = CSSMathValue.parseAll('columns', 'auto')[0];
+        document.body.attributeStyleMap.append('grid-auto-columns', cssStyleValue);
+      } finally {
+        if (window.testRunner)
+          testRunner.notifyDone();
+      }
+    }
+    setTimeout(run, 20);
   };
 </script>
 <div>This test should not crash</div>
