REGRESSION(291521@main): IPC tests which establish a RemoteRenderingBackend should wait for DidInitialize https://bugs.webkit.org/show_bug.cgi?id=289095 rdar://146121871
Reviewed by Simon Fraser.

create-image-buffer-crash and invalid-path-segments-crash both established a RemoteRenderingBackend but
did not wait for the DidInitialize message to come back from GPUP. As a result, the message hit the
invalid message handler and would cause a MESSAGE_CHECK to be triggered in debug builds. This change
waits for DidInitialize before we use the connections

* LayoutTests/ipc/create-image-buffer-crash.html:
* LayoutTests/ipc/invalid-path-segments-crash.html:

Canonical link: https://commits.webkit.org/292379@main

--- a/LayoutTests/ipc/create-image-buffer-crash.html
+++ b/LayoutTests/ipc/create-image-buffer-crash.html
@@ -1,6 +1,6 @@
 <!-- webkit-test-runner [ IPCTestingAPIEnabled=true ] -->
 <p>This test passes if WebKit does not crash.</p>
-
+<script src="../resources/ipc.js"></script>
 <script>
   if (window.testRunner) {
     testRunner.dumpAsText();
@@ -13,9 +13,13 @@
 
     const { CoreIPC } = await import('./coreipc.js');
 
+    const renderingBackendIdentifier = randomIPCID();
     const connection = CoreIPC.newStreamConnection();
-    CoreIPC.GPU.GPUConnectionToWebProcess.CreateRenderingBackend(0, { renderingBackendIdentifier: 393221, connectionHandle: connection });
-    const remoteBackend = connection.newInterface("RemoteRenderingBackend", 393221);
+    CoreIPC.GPU.GPUConnectionToWebProcess.CreateRenderingBackend(0, { renderingBackendIdentifier: renderingBackendIdentifier, connectionHandle: connection });
+    const remoteBackend = connection.newInterface("RemoteRenderingBackend", renderingBackendIdentifier);
+
+    const didInitializeReply = connection.connection.waitForMessage(renderingBackendIdentifier, IPC.messages.RemoteRenderingBackendProxy_DidInitialize.name, 1)
+    connection.connection.setSemaphores(didInitializeReply[0].value, didInitializeReply[1].value);
 
     // The pixel formats to test
     const pixelFormats = [
@@ -51,6 +55,8 @@
         });
       } catch {}
     }
+
+    connection.connection.invalidate();
 
     window.testRunner?.notifyDone();
   }, 10);
