--- a/LayoutTests/ipc/invalid-path-segments-crash.html
+++ b/LayoutTests/ipc/invalid-path-segments-crash.html
@@ -1,6 +1,6 @@
 <!-- webkit-test-runner [ IPCTestingAPIEnabled=true ] -->
 <p>This test passes if WebKit does not crash.</p>
-
+<script src="../resources/ipc.js"></script>
 <script>
 if (window.testRunner) {
     testRunner.dumpAsText();
@@ -13,53 +13,60 @@ window.setTimeout(async () => {
 
   const { CoreIPC } = await import('./coreipc.js');
 
-
   const createRepeatedPath = (pathSegments, repeatCount) => Array(repeatCount).fill(pathSegments).flat();
 
+  const renderingBackendIdentifier = randomIPCID();
   const connection = CoreIPC.newStreamConnection();
   CoreIPC.GPU.GPUConnectionToWebProcess.CreateRenderingBackend(0, {
-    renderingBackendIdentifier: 393217,
+    renderingBackendIdentifier: renderingBackendIdentifier,
     connectionHandle: connection
   });
 
-  const renderingBackend = connection.newInterface("RemoteRenderingBackend", 393217);
+  const renderingBackend = connection.newInterface("RemoteRenderingBackend", renderingBackendIdentifier);
+
+  const didInitializeReply = connection.connection.waitForMessage(renderingBackendIdentifier, IPC.messages.RemoteRenderingBackendProxy_DidInitialize.name, 1)
+  connection.connection.setSemaphores(didInitializeReply[0].value, didInitializeReply[1].value);
+
+  const imageBufferIdentifier = randomIPCID();
+  const snapshotIdentifier = randomIPCID();
 
   renderingBackend.CreateImageBuffer({
     logicalSize: { width: 91, height: 119 },
-    renderingMode: 3,
-    renderingPurpose: 1,
+    renderingMode: 3, // DisplayList
+    renderingPurpose: 1, // Canvas
     resolutionScale: 57,
     colorSpace: {
       serializableColorSpace: {
         alias: {
-          m_cgColorSpace: { alias: { variantType: 'WebCore::ColorSpace', variant: 19 } }
+          m_cgColorSpace: { alias: { variantType: 'WebCore::ColorSpace', variant: 1 } }
         }
       }
     },
     pixelFormat: 1,
-    renderingResourceIdentifier: 393224
+    renderingResourceIdentifier: imageBufferIdentifier
   });
 
-  const imageBufferIdentifier = 393224;
+  const didCreateBackend = connection.connection.waitForMessage(imageBufferIdentifier, IPC.messages.RemoteImageBufferProxy_DidCreateBackend.name, 1);
+
   const imageBuffer = connection.newInterface("RemoteImageBuffer", imageBufferIdentifier);
   const displayListRecorder = connection.newInterface("RemoteDisplayListRecorder", imageBufferIdentifier);
   const pageID = IPC.pageID;
+
+  displayListRecorder.BeginPage({
+    pageSize: {
+      width: 100,
+      height: 100,
+    }
+  });
 
   displayListRecorder.DrawFocusRingPath({
     path: {
       segments: createRepeatedPath([
         { data: { alias: { variantType: 'WebCore::PathMoveTo', variant: { point: { x: 43, y: 22 } } } } },
-        { data: { alias: { variantType: 'WebCore::PathQuadCurveTo', variant: { controlPoint: { x: 7, y: 12 }, endPoint: { x: 91, y: 109 } } } } },
-        { data: { alias: { variantType: 'WebCore::PathDataQuadCurve', variant: { start: { x: 122, y: 46 }, controlPoint: { x: 54, y: 69 }, endPoint: { x: 70, y: 506806141048 } } } } },
-        { data: { alias: { variantType: 'WebCore::PathArcTo', variant: { controlPoint1: { x: 62, y: 18 }, controlPoint2: { x: 72, y: 88 }, radius: 37 } } } },
-        { data: { alias: { variantType: 'WebCore::PathRect', variant: { rect: { location: { x: 67, y: 60 }, size: { width: 31, height: 4875397766316111 } } } } } },
-        { data: { alias: { variantType: 'WebCore::PathRoundedRect', variant: { roundedRect: { rect: { location: { x: 55834574893, y: 275066885505103 }, size: { width: 118, height: 91 } }, radiiTopLeft: { width: 50, height: 102 }, radiiTopRight: { width: 20, height: 125 }, radiiBottomLeft: { width: 66, height: 119 }, radiiBottomRight: { width: 322123005958, height: 122 } }, strategy: 0 } } } },
-        { data: { alias: { variantType: 'WebCore::PathArcTo', variant: { controlPoint1: { x: 19, y: 335008760447 }, controlPoint2: { x: 197568495714, y: 124 }, radius: 65 } } } },
-        { data: { alias: { variantType: 'WebCore::PathArc', variant: { center: { x: 1, y: 79 }, radius: 97, startAngle: 83, endAngle: 19, direction: 1 } } } },
-        { data: { alias: { variantType: 'WebCore::PathMoveTo', variant: { point: { x: 106, y: 14 } } } } }
-      ], 1120)
+        { data: { alias: { variantType: 'WebCore::PathQuadCurveTo', variant: { controlPoint: { x: 7, y: 12 }, endPoint: { x: 91, y: 99 } } } } },
+      ], 1)
     },
-    outlineWidth: 240518168607,
+    outlineWidth: 1,
     color: {
       data: {
         optionalValue: {
@@ -71,9 +78,14 @@ window.setTimeout(async () => {
     }
   });
 
-  renderingBackend.DidDrawRemoteToPDF({ pageID, imageBufferIdentifier, snapshotIdentifier: 262145 });
-  imageBuffer.GetShareableBitmap({ preserveResolution: true });
+  renderingBackend.DidDrawRemoteToPDF({ pageID, imageBufferIdentifier, snapshotIdentifier: snapshotIdentifier });
+  imageBuffer.FlushContextSync({}, ()=>{
+      CoreIPC.GPU.GPUConnectionToWebProcess.ReleaseRenderingBackend(0, {
+        renderingBackendIdentifier: renderingBackendIdentifier
+      });
+    connection.connection.invalidate();
+    window.testRunner?.notifyDone();
+  });
 
-  window.testRunner?.notifyDone();
 }, 20);
 </script>
