REGRESSION(274481@main): crash when trying to open web inspector, `RELEASE_ASSERT(!m_inStyleRecalc)` hit under `Document::resolveStyle()` https://bugs.webkit.org/show_bug.cgi?id=286534 <rdar://problem/143769557>
Reviewed by BJ Burg.

Instead of pushing animation effect changes to the frontend every time they happen, have the frontend request the new animation effect only when it needs it.

This avoids the unnecessary work of recalculating and redisplaying the animation effect data when the Graphics Tab is not visible (as well as fixing the bug by not doing work during layout).

For future reference, an alternative fix could've been to modify `InspectorAnimationAgent::enable` such that it delays calling `InspectorAnimationAgent::bindAnimation` by at least `0_s` (similar to what `InspectorAnimationAgent::didCreateWebAnimation` already does) so that it can never happen during layout.

* Source/JavaScriptCore/inspector/protocol/Animation.json:
* Source/WebCore/inspector/agents/InspectorAnimationAgent.h:
* Source/WebCore/inspector/agents/InspectorAnimationAgent.cpp:
(WebCore::InspectorAnimationAgent::requestEffect): Added.
(WebCore::InspectorAnimationAgent::requestEffectTarget):
(WebCore::InspectorAnimationAgent::didChangeWebAnimationEffectTiming):
(WebCore::InspectorAnimationAgent::didChangeWebAnimationEffectTarget):
(WebCore::InspectorAnimationAgent::bindAnimation):
* Source/WebInspectorUI/UserInterface/Protocol/AnimationObserver.js:
(WI.AnimationObserver.prototype.effectChanged):
* Source/WebInspectorUI/UserInterface/Controllers/AnimationManager.js:
(WI.AnimationManager.prototype.effectChanged):
* Source/WebInspectorUI/UserInterface/Models/Animation.js:
(WI.Animation):
(WI.Animation.fromPayload):
(WI.Animation.prototype.get startDelay):
(WI.Animation.prototype.get endDelay):
(WI.Animation.prototype.get iterationCount):
(WI.Animation.prototype.get iterationStart):
(WI.Animation.prototype.get iterationDuration):
(WI.Animation.prototype.get timingFunction):
(WI.Animation

--- a/LayoutTests/inspector/animation/effectChanged.html
+++ b/LayoutTests/inspector/animation/effectChanged.html
@@ -28,6 +28,10 @@ function test()
 
             InspectorTest.assert(animation.animationType === WI.Animation.Type.WebAnimation, "Animation should be a web animation.");
 
+            InspectorTest.expectNull(animation._effect, "Animation should not start with effect.");
+            InspectorTest.log("Updating effect...\n");
+            await animation.ensureEffect();
+
             let oldKeyframes = animation.keyframes;
             InspectorTest.expectNotEmpty(oldKeyframes, "Animation should have an effect.");
 
@@ -36,6 +40,10 @@ function test()
                 animation.awaitEvent(WI.Animation.Event.EffectChanged),
                 InspectorTest.evaluateInPage(`window.animation.effect = new KeyframeEffect(window.animation.effect.target, [{opacity: 1}], {})`),
             ]);
+
+            InspectorTest.expectNull(animation._effect, "Animation should need to update effect.");
+            InspectorTest.log("Updating effect...\n");
+            await animation.ensureEffect();
 
             let newKeyframes = animation.keyframes;
             InspectorTest.expectNotEmpty(newKeyframes, "Animation should have an effect.");
@@ -59,6 +67,8 @@ function test()
 
             InspectorTest.assert(animation.animationType === WI.Animation.Type.WebAnimation, "Animation should be a web animation.");
 
+            // Effect will carry over from previous test case.
+
             let oldKeyframes = animation.keyframes;
             InspectorTest.expectNotEmpty(oldKeyframes, "Animation should have an effect.");
 
@@ -67,6 +77,10 @@ function test()
                 animation.awaitEvent(WI.Animation.Event.EffectChanged),
                 InspectorTest.evaluateInPage(`window.animation.effect = null`),
             ]);
+
+            InspectorTest.expectNull(animation._effect, "Animation should need to update effect.");
+            InspectorTest.log("Updating effect...\n");
+            await animation.ensureEffect();
 
             let newKeyframes = animation.keyframes;
             InspectorTest.expectEmpty(newKeyframes, "Animation should not have an effect.");
