--- a/LayoutTests/js/dom/rejected-promise-creation-should-check-exception.html
+++ b/LayoutTests/js/dom/rejected-promise-creation-should-check-exception.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!-- webkit-test-runner [ jscOptions=--validateExceptionChecks=true ] -->
+<!DOCTYPE html><!-- webkit-test-runner [ jscOptions=--validateExceptionChecks=true, dumpJSConsoleLogInStdErr=true ] -->
 <html>
 <head>
 <script src="../../resources/js-test-pre.js"></script>
