[GTK][WPE] Remove invalid flag from Damage https://bugs.webkit.org/show_bug.cgi?id=290098
Reviewed by Alejandro G. Castro.

The invalid flag is very confusing, it's not clear the difference
between empty and invalid Damage, and it's used with different meanings
in different places. We can just use std::optional which always means no
damage, so that the way we handle no damage depends on every case.
This patch also tries to avoid copying Damage whenever possible and
removes the method to get a region, since that's only used by the
FrameDamageHistory and it's an implementation detail.

* LayoutTests/platform/glib/damage/accelerated-canvas-2d-fillRect.html:
* LayoutTests/platform/glib/damage/animations-blur.html:
* LayoutTests/platform/glib/damage/basic-propagation-001.html:
* LayoutTests/platform/glib/damage/basic-propagation-002.html:
* LayoutTests/platform/glib/damage/canvas-webgl.html:
* LayoutTests/platform/glib/damage/common.js:
* LayoutTests/platform/glib/damage/image-as-layer-src-change.html:
* LayoutTests/platform/glib/damage/image-src-change.html:
* LayoutTests/platform/glib/damage/layer-backdrop-filter.html:
* LayoutTests/platform/glib/damage/layer-color-change.html:
* LayoutTests/platform/glib/damage/layer-downsize-with-movement.html:
* LayoutTests/platform/glib/damage/layer-downsize.html:
* LayoutTests/platform/glib/damage/layer-in-layer-movement.html:
* LayoutTests/platform/glib/damage/layer-movement.html:
* LayoutTests/platform/glib/damage/layer-opacity-change.html:
* LayoutTests/platform/glib/damage/layer-overlaps-with-opacity.html:
* LayoutTests/platform/glib/damage/layer-resize.html:
* LayoutTests/platform/glib/damage/layer-text-change.html:
* LayoutTests/platform/glib/damage/layer-upsize.html:
* LayoutTests/platform/glib/damage/layer-visibility-change.html:
* LayoutTests/platform/glib/damage/non-accelerated-canvas-2d-arc.html:
* LayoutTests/platform/glib/damage/non-accelerated-canvas-2d-downsizing.html:
* LayoutTests/platform/glib/damage/non-accelera

--- a/LayoutTests/platform/glib/damage/video.html
+++ b/LayoutTests/platform/glib/damage/video.html
@@ -12,8 +12,7 @@
       var video = document.getElementsByTagName("video")[0];
       video.ontimeupdate = () => {
           var damage = latestFrameDamage();
-          if (!assertValid(damage)
-              || !assertRectsEq(damage.rects, [[0, 0, 160, 120]]))
+          if (!assertRectsEq(damage.rects, [[0, 0, 160, 120]]))
               failTest(failure);
           else
               passTest();
