--- a/LayoutTests/platform/glib/damage/animations-blur.html
+++ b/LayoutTests/platform/glib/damage/animations-blur.html
@@ -34,8 +34,7 @@
 
       setTimeout(() => {
           var damage = latestFrameDamage();
-          if (!assertValid(damage)
-              || !assertEq(damage.rects.length, 1, "wrong number of damage rects")
+          if (!assertEq(damage.rects.length, 1, "wrong number of damage rects")
               || !assertContains([22, 22, 120, 120], damage.rects[0])) {
               failTest(failure);
               return;
