[GStreamer] imported/w3c/web-platform-tests/webrtc-stats/hardware-capability-stats.https.html is failing https://bugs.webkit.org/show_bug.cgi?id=262989 <rdar://problem/120704315>
Reviewed by Xabier Rodriguez-Calvar.

Make sure our WebRTC stats contain at least one rtp-inbound and -outbound stats report. This test
was failing because of that.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::preprocessStats):

Canonical link: https://commits.webkit.org/292431@main

--- a/LayoutTests/webrtc/video-replace-track-to-null.html
+++ b/LayoutTests/webrtc/video-replace-track-to-null.html
@@ -20,7 +20,7 @@ async function getOutboundRTPStatsNumberOfEncodedFrames(connection)
     var report = await connection.getStats();
     var framesEncoded;
     report.forEach((statItem) => {
-        if (statItem.type === "outbound-rtp") {
+        if (statItem.type === "outbound-rtp" && statItem.kind === "video") {
             framesEncoded = statItem.framesEncoded;
         }
     });
